[project]
name = "pacman"
version = "0.1.0"
description = "Deep Q-Network implementation for Ms. Pac-Man"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium[other]>=1.2.2",
    "matplotlib>=3.10.7",
    "tensorflow[and-cuda]>=2.20.0",
    "typer>=0.20.0",
]

[project.scripts]
pacman-agent = "pacman.cli:app"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "PIE", "W", "TID"]
ignore = ["E501"]
